# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]

name = "pancake-share"
version = "0.0.0"
authors = ["Nora S. <leverplays@gmail.com>"]
description = "a simple p2p file/media sharing program"
readme = "README.md"
license = "BSD 3-Clause \"New\" or \"Revised\" License"
edition = "2021"

# [profile.release]

# panic = 'abort' # lmao, not worth the .2 mb decrease in size

[dependencies]

# common
clap = { version = "4.0.32", features = ["derive"] }
# bytes = "1.3.0" # maybe?
# librsync = "0.2.1"

# neqo-http3 = { tag = "v0.6.3", git = "https://github.com/mozilla/neqo" } # broken
# neqo-transport = { tag = "v0.6.3", git = "https://github.com/mozilla/neqo" }
# neqo-common = { tag = "v0.6.3", git = "https://github.com/mozilla/neqo" }

# cli
# shellwords = { version = "1.1.0", optional = true } # replaced by interactive_cli::super_duper_ultra_spliterator

# windows
windows = { version = "0.43.0", optional = true }
winapi = { version = "0.3.9", optional = true }
nwg = { package = "native-windows-gui", version = "1.0.13", optional = true }
nwd = { package = "native-windows-derive", version = "1.0.5", optional = true }

# linux
gtk = { package = "gtk4", version = "0.5.5", optional = true }
# qt

# research:
# iui = "0.3"
# iced = "0.6"

[features]

default = ["interactive-cli"]

debug = ["debug-logging", "debug-options"]
debug-logging = []
debug-options = []

interactive-cli = []

windows-os = ["dep:windows", "winapi"]
windows-native = ["windows-os", "dep:nwd", "dep:nwg"]
windows-uwp = ["windows-os"]

linux-os = []
linux-gtk = ["linux-os", "dep:gtk"]
linux-qt = ["linux-os"]
