# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]

name = "pancake-share"
version = "0.0.0"
authors = ["Nora S. <leverplays@gmail.com>"]
description = "a simple p2p file/media sharing program"
readme = "README.md"
license = "BSD 3-Clause \"New\" or \"Revised\" License"
edition = "2021"

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
# librsync = "0.2.1"
borsh = "0.9.3"
# home = "0.5.4"
# serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# windows
windows = { version = "0.43.0", optional = true }
winapi = { version = "0.3.9", optional = true }
nwg = { package = "native-windows-gui", version = "1.0.13", optional = true }
nwd = { package = "native-windows-derive", version = "1.0.5", optional = true }

# linux
gtk = { package = "gtk4", version = "0.5.5", optional = true }
# uuid = { version = "1.3.0", features = ["serde", "fast-rng"] }
# qt

# research:
# iui = "0.3"
# iced = "0.6"

[features]

default = []

debug = ["debug-logging", "debug-options"]
debug-logging = []
debug-options = []

interactive-cli = []

linux-os = []
linux-gtk = ["linux-os", "dep:gtk"]
linux-qt = ["linux-os"]

windows-os = ["dep:windows", "dep:winapi"]
windows-native = ["windows-os", "dep:nwd", "dep:nwg"]
windows-uwp = ["windows-os"]
